# OpenDeck-Browser

./: AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: architecture.md  codex-workflows.md  github-integration.md  mvp.md  release-plan.md  roadmap.md  security-model.md  vision.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: app_data.rs
src-tauri/src/domain/: app_data.rs
src-tauri/src/services/: storage.rs
src/app/: App.tsx  AppShell.tsx
src/components/layout/: Sidebar.tsx  StatusPanel.tsx  TopBar.tsx  WorkspaceArea.tsx
src/components/ui/: InfoCard.tsx  StatusBadge.tsx  ViewHeader.tsx  ViewSection.tsx
src/features/about/: AboutView.tsx
src/features/home/: HomeView.tsx  homePresentation.ts
src/features/projects/: CreateWorkspaceForm.tsx  ProjectsView.tsx  RenameWorkspaceForm.tsx  projectsPresentation.ts  workspaceActiveSelection.ts  workspaceCreateForm.ts  (+2 more)
src/state/: AppDataProvider.tsx  appDataActions.ts  appDataState.ts
src/styles/: global.css  layout.css  tokens.css  views.css
src/types/: appData.ts
tests/: appDataActions.test.mjs  appDataGuards.test.mjs  appDataState.test.mjs  homePresentation.test.mjs  projectsPresentation.test.mjs  settingsForm.test.mjs  settingsPresentation.test.mjs  tabReducer.test.mjs  workspaceActiveSelection.test.mjs  workspaceCreateForm.test.mjs  workspaceDelete.test.mjs  workspaceRenameForm.test.mjs
(+12 files in other folders)
