[package]
name = "opendeck-browser"
version = "0.1.0"
description = "A secure, local-first desktop workspace for open-source maintainers"
authors = ["OpenDeck Browser contributors"]
edition = "2021"

[lib]
name = "opendeck_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
time = { version = "0.3", features = ["formatting", "parsing"] }
